base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: revieu-web-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: revieu-web
